# libpeas

./: configure.ac
libpeas/: Makefile.am  peas-dirs.c  peas-engine.c  peas-engine.h  peas-plugin-info-priv.h  peas-plugin-info.c  peas-plugin-info.h  peas-utils.c  peas-utils.h
libpeas-gtk/: Makefile.am  peas-gtk-osx.h  peas-gtk-osx.m  peas-gtk-plugin-manager.c
loaders/: Makefile.am
loaders/lua5.1/: Makefile.am
loaders/lua5.1/resources/: Makefile.am
loaders/python/: peas-plugin-loader-python.c
loaders/rbffi/: Makefile.am  peas-plugin-loader-rbffi.c  peas-plugin-loader-rbffi.h  peas-rbffi-internal.rb  peas-rbffi-resources.c  peas-rbffi.gresource.xml
peas-demo/plugins/: Makefile.am
tests/libpeas/: Makefile.am  extension-c.c  extension-lua.c  extension-py.c  extension-rbffi.c
tests/libpeas/plugins/: Makefile.am  extension-lua51-nonexistent.plugin
tests/libpeas/plugins/extension-lua/: extension-lua51.plugin
tests/libpeas/plugins/extension-rbffi/: Makefile.am  extension-rbffi.gschema.xml  extension-rbffi.plugin  extension-rbffi.rb
tests/libpeas/testing/: testing-extension.c  testing-extension.h
